--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: ansible-test
 on: [push]
 
 jobs:
-  checkout:
+  tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-python@v1
 
     - name: Install ansible and test requirements
-      run: pip install ansible pycodestyle pylint
+      run: pip install ansible pycodestyle pylint rstcheck virtualenv voluptuous yamllint
 
     - name: Run sanity tests
       run: ansible-test sanity
