--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       run: pip install ansible pycodestyle pylint rstcheck virtualenv voluptuous yamllint
 
     - name: Install python3-apt
-      run: apt install python3-apt
+      run: sudo apt-get install -y python3-apt
 
     - name: Run sanity tests
       run: ansible-test sanity
