--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v1
 
+    - name: Install ansible
+      run: pip install ansible
+
     - name: Run sanity tests
       run: ansible-test sanity --docker
       working-directory: ansible_collections/shaps/ipset
