Test with ansible-minimal
ansible-minimal is the smaller distribution that will be become Ansible 2.10. This is built every night via https://github.com/ansible-collection-migration/ansible-minimal `ansible.yml` and `ansible/ansible:devel` branch

It's worth testing against this smaller set to ensure we aren't missing any dependencies.

Note that since this is `devel` (rather than `stable-2.x`) extra tests may be added to ansible-test during it's development

rebase

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v1
 
-    - name: Install ansible
-      run: pip install ansible
+    - name: Install ansible-minimal
+      run: pip install git+https://github.com/ansible-collection-migration/ansible-minimal.git
 
     - name: Run sanity tests
       run: ansible-test sanity --docker
@@ -37,8 +37,8 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v1
 
-    - name: Install ansible
-      run: pip install ansible
+    - name: Install ansible-minimal
+      run: pip install git+https://github.com/ansible-collection-migration/ansible-minimal.git
 
     - name: Run integration tests
       run: ansible-test integration --docker-privileged --docker ${{ matrix.int_image }}
