Changes to workflow should also trigger CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: "Sanity and integration tests"
 on:
   push:
     paths:
+    - ".github/workflows/main.yml"
     - "plugins/**"
     - "tests/**"
 
