--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ on:
     - "plugins/**"
     - "tests/**"
   pull_request:
-    branches: 
+    branches:
       - master
     paths:
       - ".github/workflows/main.yml"
       - "plugins/**"
       - "tests/**"
 jobs:
-  sanity-tests:
+  sanity:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -31,10 +31,11 @@ jobs:
       working-directory: ansible_collections/shaps/ipset
 
 
-  integration-tests:
+  integration:
     strategy:
       matrix:
         int_images: ['centos7', 'centos8', 'fedora30', 'fedora31', 'ubuntu1604', 'ubuntu1804']
+        ansible_version: ['2.9', 'ansible-minimal']
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -45,6 +46,15 @@ jobs:
 
     - name: Install ansible-minimal
       run: pip install git+https://github.com/ansible-collection-migration/ansible-minimal.git
+      if: matrix.ansible_version == 'ansible-minimal'
+
+    - name: Install Ansible 2.9
+      run: pip install 'ansible>=2.9,<2.10'
+      if: matrix.ansible_version == '2.9'
+
+    - name: Install Ansible 2.10
+      run: pip install 'ansible>=2.9,<2.10'
+      if: matrix.ansible_version == '2.10'
 
     - name: Run integration tests
       run: ansible-test integration --docker-privileged --docker ${{ matrix.int_image }}
