--- a/tests/integration/targets/ipset_entry/tasks/check_mode.yml
+++ b/tests/integration/targets/ipset_entry/tasks/check_mode.yml
@@ -19,6 +19,13 @@
   register: ipset_entry_shell_created_check_mode
   ignore_errors: true
 
+- name: Add {{ ipset_entry_test_network }} to {{ ipset_test_set_name }}
+  ipset_entry:
+    set_name: "{{ ipset_test_set_name }}"
+    net: "{{ ipset_entry_test_network }}"
+    timeout: "{{ ipset_entry_test_timeout }}"
+  become: true
+
 - name: Remove {{ ipset_entry_test_network }} from {{ ipset_test_set_name }}
   ipset_entry:
     set_name: "{{ ipset_test_set_name }}"
@@ -28,9 +35,12 @@
   check_mode: true
   register: ipset_entry_deleted_check_mode
 
+- name: Check entry has not been removed
+  shell: "ipset list {{ ipset_test_set_name }} | grep {{ ipset_entry_test_network }}"
+
 - name: Assert entry has been created
   assert:
     that:
       - ipset_entry_created_check_mode is changed
       - "'{{ ipset_entry_test_network }}' not in '{{ ipset_entry_shell_created_check_mode.stdout }}'"
-      - ipset_entry_deleted_check_mode is not changed
+      - ipset_entry_deleted_check_mode is changed
