--- a/tests/integration/targets/ipset_set/tasks/check_mode.yml
+++ b/tests/integration/targets/ipset_set/tasks/check_mode.yml
@@ -20,9 +20,25 @@
   register: ipset_set_removed_check_mode
   check_mode: true
 
+- name: Create ipset set {{ ipset_test_set_name }} ( non check_mode )
+  ipset_set:
+    set_name: "{{ ipset_test_set_name }}"
+    set_type: "hash:net"
+    set_timeout: "{{ ipset_entry_test_timeout }}"
+  become: true
+
+- name: Delete {{ ipset_test_set_name }} (check_mode)
+  ipset_set:
+    set_name: "{{ ipset_test_set_name }}"
+    state: absent
+  register: ipset_test_removed_check_mode_again
+  check_mode: true
+  become: true
+
 - name: Set was created and removed correctly
   assert:
     that:
       - ipset_set_created_check_mode is changed
       - ipset_set_command_created_check_mode.rc == 1
       - ipset_set_removed_check_mode is not changed
+      - ipset_test_removed_check_mode_again is changed
